做了一些优化，代码看起来更狗屎了！待重构

--- a/game.html
+++ b/game.html
@@ -38,13 +38,18 @@
 
     <!-- 辅助函数 -->
     <script src="js/assist.js"></script>
+
+    <!-- 类 -->
     <script src="js/paddle.js"></script>
     <script src="js/ball.js"></script>
     <script src="js/block.js"></script>
-    <!-- canvas控制 -->
+
+    <!-- 控制canvas -->
     <script src="js/game.js"></script>
+    
     <!-- 关卡 -->
     <script src="js/level.js"></script>
+    
     <!-- 入口 -->
     <script src="js/main.js"></script>
 </body>
