--- a/game.html
+++ b/game.html
@@ -50,6 +50,9 @@
     <!-- 关卡 -->
     <script src="js/level.js"></script>
     
+    <!-- 场景 -->
+    <script src="js/scene.js"></script>
+    <script src="js/scene_end.js"></script>
     <!-- 入口 -->
     <script src="js/main.js"></script>
 </body>
