重构项目目录结构、添加开始/结束游戏场景。下一步开始定义‘类’来简化代码...

--- a/game.html
+++ b/game.html
@@ -37,22 +37,23 @@
     </div>
 
     <!-- 辅助函数 -->
-    <script src="js/assist.js"></script>
+    <script src="js/game/assist.js"></script>
 
     <!-- 类 -->
-    <script src="js/paddle.js"></script>
-    <script src="js/ball.js"></script>
-    <script src="js/block.js"></script>
+    <script src="js/scene/main/paddle.js"></script>
+    <script src="js/scene/main/ball.js"></script>
+    <script src="js/scene/main/block.js"></script>
 
     <!-- 控制canvas -->
-    <script src="js/game.js"></script>
+    <script src="js/game/game.js"></script>
     
     <!-- 关卡 -->
     <script src="js/level.js"></script>
     
     <!-- 场景 -->
-    <script src="js/scene.js"></script>
-    <script src="js/scene_end.js"></script>
+    <script src="js/scene/main/scene.js"></script>
+    <script src="js/scene/end/scene_end.js"></script>
+    <script src="js/scene/title/scene_title.js"></script>
     <!-- 入口 -->
     <script src="js/main.js"></script>
 </body>
