把爆炸颗粒类，归类到文件里了。方便以后加功能是直接调用

--- a/JS-planeGame/game.html
+++ b/JS-planeGame/game.html
@@ -86,6 +86,7 @@
     <script src="js/game/game.js"></script>
     <script src="js/game/gua_scene.js"></script>
     <script src="js/game/gua_image.js"></script>
+    <script src="js/game/gua_label.js"></script>
     <script src="js/game/gua_particle_system.js"></script>
 
     <!-- 场景相关文件 -->
