--- a/JS-planeGame/game.html
+++ b/JS-planeGame/game.html
@@ -90,11 +90,13 @@
     <script src="js/game/gua_animation.js"></script>
 
     <!-- 场景相关文件 -->
-    <script src="js/scene/main/scene.js"></script>
     <script src="js/scene/main/player.js"></script>
     <script src="js/scene/main/bg.js"></script>
     <script src="js/scene/main/yun.js"></script>
     <script src="js/scene/main/enemy.js"></script>
+    <script src="js/scene/main/score.js"></script>
+    <script src="js/scene/main/scene.js"></script>
+
     <!-- 结束/标题场景 -->
     <script src="js/scene/end/scene_end.js"></script>
     <script src="js/scene/title/scene_title.js"></script>
