完成了一部分结束场景，进行中...

--- a/JS-planeGame/game.html
+++ b/JS-planeGame/game.html
@@ -99,6 +99,8 @@
 
     <!-- 结束/标题场景 -->
     <script src="js/scene/end/scene_end.js"></script>
+    <script src="js/scene/end/endBg.js"></script>
+    <script src="js/scene/end/endRetry.js"></script>
     <script src="js/scene/title/scene_title.js"></script>
 
     <!-- 入口 -->
