结束场景基本完成

--- a/JS-planeGame/game.html
+++ b/JS-planeGame/game.html
@@ -99,7 +99,7 @@
 
     <!-- 结束/标题场景 -->
     <script src="js/scene/end/scene_end.js"></script>
-    <script src="js/scene/end/endBg.js"></script>
+    <script src="js/scene/end/scorePanel.js"></script>
     <script src="js/scene/end/endRetry.js"></script>
     <script src="js/scene/title/scene_title.js"></script>
 
