敌机动画实现

--- a/JS-planeGame/game.html
+++ b/JS-planeGame/game.html
@@ -11,11 +11,11 @@
             margin: 0;
         }
 
-        h1 {
+        /* h1 {
             width: 500px;
             text-align: center;
             margin: 20px auto;
-        }
+        } */
 
         canvas {
             border: 1px solid black;
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h1>JavaScript-打飞机</h1>
+    <!-- <h1>JavaScript-打飞机</h1> -->
     <canvas id="game-canvas" width="450" height="800"></canvas>
     <hr>
     <div style="width:300px;margin: 20px auto;text-align: center;">
@@ -102,6 +102,7 @@
     <script src="js/scene/end/scorePanel.js"></script>
     <script src="js/scene/end/endRetry.js"></script>
     <script src="js/scene/title/scene_title.js"></script>
+    <script src="js/scene/title/playButton.js"></script>
 
     <!-- 入口 -->
     <script src="js/main.js"></script>
